testing image width/height

--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@ layout: home
 author_profile: true
 header: 
     image: "/images/model.jpg"
+    style:
+        width: 1080px
+        height: 400px
 ---
