--- a/index.html
+++ b/index.html
@@ -2,8 +2,5 @@
 layout: home
 author_profile: true
 header: 
-    image: "/images/model.jpg"
-    style:
-        width: 1080px
-        height: 400px
+    <img src="images/model.jpg" alt="model" width="1080" height="400"/>
 ---
