--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header: 
-    <img src="images/model.jpg" alt="model" width="1080" height="400"/>
+    image: <img src="/images/model.jpg" alt="model" width="1080" height="400"/>
 ---
