--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: home
 author_profile: true
-header: 
-    image: <img src="/images/model.jpg" alt="model" width="1080" height="400"/>
+header: <img src="/images/model.jpg" alt="model" width="1080" height="400"/>
 ---
