--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
 author_profile: true
-header: <img src="/images/model.jpg" alt="model" width="1080" height="400"/>
+header:
+    image: "images/model.jpg =1080x400"
 ---
