--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-    ![]("https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg" =1080x400)
+    image: ("https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg" =1080x400)
 ---
