--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: home
 author_profile: true
-header:
-    image: ("https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg" =1080x400)
+header: ![test](https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg)
 ---
