--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
 author_profile: true
-header: ![test](https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg)
+header: 
+    image: ![test](https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg)
 ---
