--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header: 
-    image: ![test](https://github.com/Sir-Benj/Portfolio/blob/master/images/model.jpg)
+    image: "images/model.jpg"
 ---
