--- a/index.html
+++ b/index.html
@@ -5,4 +5,13 @@ header:
     image: "images/model.png"
 ---
 
-# Major Projects:
+<h1>Major Projects:</h1>
+
+Click on the links below to access the pages showcasing my main projects.
+
+
+
+
+<h2>Development Posts:</h2>
+
+These posts show my development and how I learn, click on them to read all about it.
