--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@ author_profile: true
 header: 
     image: "images/model.png"
 ---
+<font size = "4">
+    Welcome to my portfolio and development blog, here I show off some of my major projects
+    created while studying, either as part of my course or in my own free time and also where 
+    I talk about what I have been learning in regards to programming and game dev outside of 
+    my studies. This ranges from new mathematical operations and programming practices through 
+    to designs in Blender and game creations within Unity. To get started click on a few of the
+    links below and enjoy your time exploring my world. 
+</font>
 
-<h1>Major Projects:</h1>
+<h2>Projects:</h2>
 
-Click on the links below to access the pages showcasing my main projects.
+Major programming projects for my studies can be found [here](https://sir-benj.github.io/Portfolio/programming/).
 
-
-
+Unity projects and Blender designs can be found [here](https://sir-benj.github.io/Portfolio/unity/)
 
 <h2>Development Posts:</h2>
 
-These posts show my development and how I learn, click on them to read all about it.
+These posts show my development and how I learn, 
