--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ header:
 
 <h2>Projects:</h2>
 
-Major programming projects for my studies can be found [here](https://sir-benj.github.io/Portfolio/programming/).
+Major programming projects for my studies can be found <a href="https://sir-benj.github.io/Portfolio/programming/">here</a>.
 
-Unity projects and Blender designs can be found [here](https://sir-benj.github.io/Portfolio/unity/)
+Unity projects and Blender designs can be found <a href="https://sir-benj.github.io/Portfolio/unity&blender/">here</a>.
 
 <h2>Development Posts:</h2>
 
-These posts show my development and how I learn, 
+<a href="https://sir-benj.github.io/Portfolio/development/">These</a> posts show my development and how I learn.
