--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@ header:
 
 <h2>Projects:</h2>
 
-Major programming projects for my studies can be found <a href="https://sir-benj.github.io/Portfolio/programming/">here</a>.
+<font size= "4">
+    Major programming projects for my studies can be found <a href="https://sir-benj.github.io/Portfolio/programming/">here</a>.
+</font>
 
-Unity projects and Blender designs can be found <a href="https://sir-benj.github.io/Portfolio/unity&blender/">here</a>.
+<font size= "4">
+    Unity projects and Blender designs can be found <a href="https://sir-benj.github.io/Portfolio/unity&blender/">here</a>.
+</font>
 
 <h2>Development Posts:</h2>
 
-<a href="https://sir-benj.github.io/Portfolio/development/">These</a> posts show my development and how I learn.
+<font size = "4">
+    <a href="https://sir-benj.github.io/Portfolio/development/">These</a> posts show my development and how I learn.
+</font>
