--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header:
     image: "images/model.png"
 ---
 <font size = "4">
-    Welcome to my portfolio and development blog, here I show off some of my major projects
+    Welcome to my portfolio and development blog. Here I show off some of my major projects
     created while studying, either as part of my course or in my own free time and also where 
     I talk about what I have been learning in regards to programming and game dev outside of 
     my studies. This ranges from new mathematical operations and programming practices through 
@@ -15,7 +15,7 @@ header:
 
 <h2>Projects:</h2>
 
-<font size= "4">
+<font size= "5">
     Major programming projects for my studies can be found <a href="https://sir-benj.github.io/Portfolio/programming/">here</a>.
 
     Unity projects and Blender designs can be found <a href="https://sir-benj.github.io/Portfolio/unity&blender/">here</a>.
@@ -23,6 +23,6 @@ header:
 
 <h2>Development Posts:</h2>
 
-<font size = "4">
+<font size = "5">
     <a href="https://sir-benj.github.io/Portfolio/development/">These</a> posts show my development and how I learn.
 </font>
