--- a/index.html
+++ b/index.html
@@ -5,21 +5,16 @@ header:
     image: "images/model.png"
 ---
 
-Welcome to my portfolio and development blog. Here I show off some of my major projects
-created while studying, either as part of my course or in my own free time and also where 
-I talk about what I have been learning in regards to programming and game dev outside of 
-my studies. This ranges from new mathematical operations and programming practices through 
-to designs in Blender and game creations within Unity. To get started click on a few of the
-links below and enjoy your time exploring my world. 
-
+Welcome to my portfolio and development blog. Here I present my major projects
+created as part of my studies or in my free time, as well as a development
+blog that shows what areas I am currently gaining knowledge in.
 
 <h2>Projects:</h2>
 
-Major programming projects for my studies can be found <a href="https://sir-benj.github.io/Portfolio/programming/">here</a>.
+Major programming projects can be found <a href="https://sir-benj.github.io/Portfolio/programming/">here</a>.
 
-Unity projects and Blender designs can be found <a href="https://sir-benj.github.io/Portfolio/unity&blender/">here</a>.
-
+3D Design projects can be found <a href="https://sir-benj.github.io/Portfolio/unity&blender/">here</a>.
 
 <h2>Development Posts:</h2>
 
-<a href="https://sir-benj.github.io/Portfolio/development/">These</a> posts show my development and how I learn.
+<a href="https://sir-benj.github.io/Portfolio/development/">These</a> posts are about the skills I'm gaining, in my free time and will be updated on a regular basis.
